--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
      "scripts": {
-      "start": "vite"
+          "start": "vite"
      },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
-  }
+     "devDependencies": {
+          "autoprefixer": "^10.4.14",
+          "postcss": "^8.4.21",
+          "tailwindcss": "^3.2.7",
+          "vite": "^4.1.4"
+     },
+     "dependencies": {
+          "feather": "^0.0.5"
+     }
 }
